--- a/style.css
+++ b/style.css
@@ -4,3 +4,29 @@
   font-size: large;
   color: rgb(24, 22, 22);  
 }
+
+
+     .line-clamp-2 {
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+        }
+        
+        @media (max-width: 768px) {
+            .grid-cols-1.md\\:grid-cols-2.xl\\:grid-cols-3 {
+                grid-template-columns: 1fr;
+            }
+        }
+        
+        @media (min-width: 768px) and (max-width: 1279px) {
+            .grid-cols-1.md\\:grid-cols-2.xl\\:grid-cols-3 {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+        
+        @media (min-width: 1280px) {
+            .grid-cols-1.md\\:grid-cols-2.xl\\:grid-cols-3 {
+                grid-template-columns: repeat(3, 1fr);
+            }
+        }  
